fixed white space in picture blocks

--- a/style.css
+++ b/style.css
@@ -3074,6 +3074,10 @@ object {
     height: auto;
     width: 100%;
   }
+
+  .block-picture img {
+    display: block;
+  }
   
   .block-caption-wrapper {
     position: absolute;
